# bashkit

./: .codecov.yml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KNOWN_LIMITATIONS.md  NOTICE  README.md  SECURITY.md  SECURITY_AUDIT.md  bench-results.json  bench-results.md  deny.toml  hawk.toml  justfile  mira.toml  pyproject.toml  rust-toolchain.toml  wrangler.jsonc
crates/bashkit/: Cargo.toml
crates/bashkit-bench/: Cargo.toml  README.md
crates/bashkit-bench/results/: bench-after-perf-linux-x86_64.json  bench-after-perf-linux-x86_64.md  bench-none-linux-x86_64-1773457919.json  bench-none-linux-x86_64-1773457919.md  bench-none-linux-x86_64-1773463207.json  bench-none-linux-x86_64-1773463207.md  bench-runsc-linux-x86_64-1769970640.json  bench-runsc-linux-x86_64-1769970640.md  bench-runsc-linux-x86_64-1770093060.json  bench-runsc-linux-x86_64-1770093060.md  bench-runsc-linux-x86_64-1776108888.json  bench-vm-linux-x86_64-1779764460.json  bench-vm-linux-x86_64-1779764460.md  criterion-hotpath-attrs+shopt-linux-x86_64-1779759850.md  criterion-hotpath-perf-linux-x86_64-1779744742.md  criterion-parallel-runsc-linux-x86_64-1776108890.md
crates/bashkit-bench/scripts/: generate-charts.py
crates/bashkit-bench/src/: cases.rs  main.rs  runners.rs
crates/bashkit-cli/: Cargo.toml
crates/bashkit-cli/src/: interactive.rs  main.rs  mcp.rs  python.rs
crates/bashkit-coreutils-port/: Cargo.toml  vendored.toml
crates/bashkit-coreutils-port/src/: args.rs  main.rs  manifest.rs  module.rs
crates/bashkit-eval/: Cargo.toml  README.md
crates/bashkit-eval/data/: eval-tasks.jsonl
crates/bashkit-eval/results/: eval-anthropic-claude-haiku-4-5-20251001-2026-02-09-054558.json  eval-anthropic-claude-haiku-4-5-20251001-2026-02-09-054558.md  eval-anthropic-claude-haiku-4-5-20251001-2026-02-25-044801.json  eval-anthropic-claude-haiku-4-5-20251001-2026-02-25-044801.md  eval-anthropic-claude-haiku-4-5-20251001-2026-02-27-040636.json  eval-anthropic-claude-haiku-4-5-20251001-2026-02-27-040636.md  eval-anthropic-claude-haiku-4-5-20251001-2026-02-28-204232.json  eval-anthropic-claude-haiku-4-5-20251001-2026-02-28-204232.md  eval-anthropic-claude-haiku-4-5-20251001-2026-05-26-012523.json  eval-anthropic-claude-haiku-4-5-20251001-2026-05-26-012523.md  eval-anthropic-claude-haiku-4-5-2026-02-07-052023.json  eval-anthropic-claude-haiku-4-5-2026-02-07-052023.md  eval-anthropic-claude-opus-4-6-2026-02-07-052536.json  eval-anthropic-claude-opus-4-6-2026-02-07-052536.md  eval-anthropic-claude-opus-4-6-2026-02-08-062003.json  eval-anthropic-claude-opus-4-6-2026-02-08-062003.md  eval-anthropic-claude-opus-4-6-2026-02-09-142736.json  eval-anthropic-claude-opus-4-6-2026-02-09-142736.md  eval-anthropic-claude-opus-4-6-2026-02-25-045611.json  eval-anthropic-claude-opus-4-6-2026-02-25-045611.md  eval-anthropic-claude-opus-4-6-2026-02-27-043856.json  eval-anthropic-claude-opus-4-6-2026-02-27-043856.md  eval-anthropic-claude-opus-4-6-2026-02-28-205358.json  eval-anthropic-claude-opus-4-6-2026-02-28-205358.md  eval-anthropic-claude-opus-4-7-2026-05-26-020742.json  eval-anthropic-claude-opus-4-7-2026-05-26-020742.md  eval-anthropic-claude-sonnet-4-20250514-2026-02-17-230312.json  eval-anthropic-claude-sonnet-4-20250514-2026-02-17-230312.md  eval-anthropic-claude-sonnet-4-20250514-2026-02-17-231336.json  eval-anthropic-claude-sonnet-4-20250514-2026-02-17-231336.md  eval-anthropic-claude-sonnet-4-20250514-2026-02-25-045328.json  eval-anthropic-claude-sonnet-4-20250514-2026-02-25-045328.md  eval-anthropic-claude-sonnet-4-6-2026-02-27-043854.json  eval-anthropic-claude-sonnet-4-6-2026-02-27-043854.md  eval-anthropic-claude-sonnet-4-6-2026-02-28-205324.json  eval-anthropic-claude-sonnet-4-6-2026-02-28-205324.md  eval-anthropic-claude-sonnet-4-6-2026-02-28-211120.json  eval-anthropic-claude-sonnet-4-6-2026-02-28-211120.md  eval-anthropic-claude-sonnet-4-6-2026-05-26-014508.json  eval-anthropic-claude-sonnet-4-6-2026-05-26-014508.md  (+69 more)
crates/bashkit-eval/src/: agent.rs  checks.rs  dataset.rs  lib.rs  main.rs  mira_study.rs  report.rs  runner.rs  scorer.rs  scripting_agent.rs  scripting_dataset.rs  scripting_runner.rs  snapshot.rs
crates/bashkit-fs-interop/: Cargo.toml
crates/bashkit-fs-interop/src/: lib.rs
crates/bashkit-js/: .gitignore  Cargo.toml  README.md  ai.ts  anthropic.ts  build.rs  langchain.ts  openai.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.check.json  tsconfig.json  wrapper.ts
crates/bashkit-js/__test__/: ai-adapters.spec.ts  basic.spec.ts  builtins.spec.ts  control-flow.spec.ts  custom-builtins-perf.spec.ts  custom-builtins.spec.ts  cwd-env-options.spec.ts  error-handling.spec.ts  integration.spec.ts  network.spec.ts  runtime-compat.test.mjs  scripts.spec.ts  security.spec.ts  shell-state.spec.ts  streaming-output.spec.ts  strings-and-quoting.spec.ts  tool-metadata.spec.ts  vfs.spec.ts
crates/bashkit-js/examples/: bash_basics.mjs  data_pipeline.mjs  langchain_agent.mjs  llm_tool.mjs  openai_tool.mjs  vercel_ai_tool.mjs
crates/bashkit-js/patches/: supertap@3.0.1.patch
crates/bashkit-js/scripts/: build-test-fixtures.mjs  smoke-test.sh
crates/bashkit-js/src/: lib.rs
crates/bashkit-monty-worker/: Cargo.toml
crates/bashkit-monty-worker/src/: lib.rs  main.rs
crates/bashkit-python/: Cargo.toml  README.md  pyproject.toml
crates/bashkit-python/bashkit/: __init__.py  _bashkit.pyi  deepagents.py  langchain.py  pydantic_ai.py
crates/bashkit-python/examples/: bash_basics.py  custom_filesystem_interop.py  fastapi_async_tool.py  jupyter_async_test.ipynb  k8s_orchestrator.py  langgraph_async_tool.py
crates/bashkit-python/src/: lib.rs
crates/bashkit-python/tests/: __init__.py  _bashkit_categories.py  _security_core.py  (+35 more)
crates/bashkit-wasm/: .gitignore  Cargo.toml  README.md  package.json
crates/bashkit-wasm-tests/: Cargo.toml
examples/docs-grep-agent/: README.md  pyproject.toml
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/bashkit/: langchain.py
python/bashkit_py/: __init__.py  langchain.py
python/src/: lib.rs
(+1421 files in other folders)
