# Bashkit - Awesomely fast virtual sandbox with bash and file system
# Part of the Everruns ecosystem
# See specs/ for design decisions

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "MIT"
authors = ["Mykhailo Chalyi <mike@chaliy.name>", "Everruns"]
repository = "https://github.com/everruns/bashkit"
description = "Awesomely fast virtual sandbox with bash and file system"
keywords = ["bash", "virtual", "ai", "agent", "everruns"]
categories = ["command-line-utilities", "parser-implementations"]

[workspace.dependencies]
# Async runtime
# Base features are WASM-compatible; crates needing more (rt-multi-thread, fs, net, process)
# add them in their own Cargo.toml or via [target.'cfg(...)'.dependencies].
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON processing (jq) - verified embeddable
jaq-core = "3.0"
jaq-std = "3.0"
jaq-json = "2.0"

# HTTP client (for curl and API calls)
# IMPORTANT: rustls-no-provider keeps the aws-lc-rs C crypto out of the dep tree so
# we don't depend on cross-toolchain glibc headers (e.g. AT_HWCAP2 on aarch64
# manylinux). The ring provider below is installed at runtime in
# bashkit::network::client.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# Regex
regex = "1"
fancy-regex = "0.18"

# Date/Time
chrono = "0.4"

# Compression
flate2 = "1"

# Base64 encoding
base64 = "0.22"

# Checksums (md5sum, sha256sum, etc.)
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"

# Ed25519 signing (bot-auth request signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
zeroize = "1"

# CSPRNG for placeholder token generation (security-grade randomness).
# Important decision: enable `wasm_js` so the public `wasm32-unknown-unknown`
# build gate stays green; bashkit targets JS-backed wasm for that triple.
# Used by the credential placeholder generator; getrandom is the lowest-level
# CSPRNG primitive and is already transitively in the dep tree via reqwest/rustls.
getrandom = { version = "0.4", features = ["wasm_js"] }

# CLI
# Intentionally NOT enabling clap's `env` feature: it makes `Arg::env(...)`
# read defaults from `std::env`, which would tunnel host process state into
# the bashkit sandbox (TM-INF-023). The coreutils-args-port codegen strips
# `.env(...)` chains from vendored Arg builders; dropping the feature here
# is defence-in-depth so any re-introduction fails to compile.
clap = { version = "4", features = ["derive"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"
insta = "1"

# Fault injection (security testing)
fail = "0.5"

# Property-based testing
proptest = "1"

# Logging/tracing
tracing = "0.1"
tower = { version = "0.5", features = ["util"] }

# SSH client (for ssh/scp/sftp builtins)
russh = "0.61"
# Embedded SQLite engine (Turso, pure Rust). Upstream is BETA — gated behind
# the `sqlite` feature and disabled by default; see specs/sqlite-builtin.md.
turso_core = "0.6"

# Serial test execution
serial_test = "3"

# Python bindings
pyo3 = { version = "0.29", features = ["extension-module", "generate-import-lib"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }

# JavaScript/Node.js bindings (NAPI-RS)
napi = { version = "3.8.6", default-features = false, features = ["napi6", "compat-mode", "tokio_rt"] }
napi-derive = "3.5.5"
napi-build = "2"

# Important decision: shrink test-binary link memory. `cargo test --all-features`
# statically links every embedded interpreter (monty, zapcode, turso, russh, jaq,
# reqwest+rustls, ed25519-dalek) into each of ~87 integration test binaries; with
# default `debug = "full"` the per-binary debuginfo dominates and the parallel
# link step peaks well above what the cloud sandbox tolerates. Line-tables-only
# keeps backtraces readable (function names + line numbers) while cutting
# per-binary size by 50–80% for big crates. `codegen-units` left at the default
# (16): forcing it to 1 explodes LLVM's per-crate object files on disk and made
# CI's feature-sliced test job run out of space.
[profile.test]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
# Security: interpreter relies on catch_unwind around builtins.
# Keep release unwinding enabled so panic containment works.
panic = "unwind"
strip = "symbols"

# Important decision: separate `bench` profile uses fat LTO for the most
# aggressive cross-crate inlining. Criterion benches run rarely and we'd
# rather spend extra compile time once than miss inlining opportunities
# across the interpreter / parser / builtins boundary on every measurement.
# `release` keeps `thin` LTO so day-to-day builds stay fast.
[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1

# Important decision (security): pin `jiter` to upstream main so the whole
# workspace can run pyo3 0.29, which fixes GHSA-36hh-v3qg-5jq4 (high, OOB read
# in PyList/PyTuple iterators) and GHSA-chgr-c6px-7xpp (missing `Sync` bound)
# in the bashkit-python extension.
#
# Blocker: `monty` -> `jiter 0.15.0` declares an optional `pyo3 = "^0.28.2"`.
# Although jiter's `python` feature is never activated here (monty only enables
# `num-bigint`), the weak `pyo3?/num-bigint` reference plus pyo3-ffi's
# `links = "python"` global uniqueness force the resolver to honour jiter's
# 0.28 constraint, pinning the whole graph below pyo3 0.29.
#
# jiter `main` is still version 0.15.0 (semver-compatible with monty's
# `^0.15.0`) but already bumped its pyo3 dependency to 0.29, so this patch
# unblocks the upgrade without a fork. Drop it once monty ships a release that
# tracks a published jiter with pyo3 0.29.
[patch.crates-io]
jiter = { git = "https://github.com/pydantic/jiter", rev = "6d57715e01ec78859c62fc5447073c0b5902de39" }
