[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bashkit-py"
version = "0.1.0"
description = "Python bindings for BashKit - a sandboxed bash interpreter for AI agents"
readme = "python/README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["bash", "sandbox", "ai", "agent", "shell", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Security",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3", "langchain-anthropic>=0.3"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.maturin]
manifest-path = "crates/bashkit-python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "bashkit_py._bashkit_py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
