# BashKit CLI - Command line interface for bashkit
# Run bash scripts in a sandboxed environment

[package]
name = "bashkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command line interface for BashKit sandboxed bash interpreter"
readme = "../../README.md"

[[bin]]
name = "bashkit"
path = "src/main.rs"
doc = false  # Disable to avoid collision with bashkit library docs

[dependencies]
bashkit = { path = "../bashkit", version = "0.1.0" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
