# bashkit-coreutils-port
#
# Port-time codegen tool: parses uutils/coreutils `uu_app()` definitions
# and emits clean, dependency-free clap `Command` builders into
# `crates/bashkit/src/builtins/generated/`.
#
# Run manually when bumping the pinned uutils revision; output is committed.
# See specs (TBD) — POC validating reuse of uutils argument interfaces.

[package]
name = "bashkit-coreutils-port"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Port uutils/coreutils argument interfaces into bashkit at codegen time"
publish = false

[dependencies]
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
anyhow = { workspace = true }
