# bashkit-coreutils-port
#
# Port-time codegen tool with two modes:
# - args mode (default, positional CLI): rewrite a uutils `uu_app()` clap
#   definition into a clean, dependency-free `<util>_args.rs`.
# - module mode (`port-module` subcommand): vendor a uucore module
#   verbatim into `crates/bashkit/src/builtins/generated/<out>/`, with a
#   manifest (`vendored.toml`) declaring per-import substitution policy.
#
# Run manually when bumping the pinned uutils revision; output is committed.
# See specs/coreutils-args-port.md for both modes.

[package]
name = "bashkit-coreutils-port"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Port uutils/coreutils argument interfaces and platform-clean modules into bashkit at codegen time"
publish = false

[dependencies]
syn = { version = "3", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.3"
anyhow = { workspace = true }
serde = { workspace = true }
toml = "1.1"

[dev-dependencies]
tempfile = { workspace = true }
