# bashkit-eval: LLM evaluation harness for bashkit tool usage
# Measures how well models use a sandboxed bash tool in agentic workloads
# See specs/eval.md for design decisions

[package]
name = "bashkit-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM evaluation harness for bashkit tool usage"

[[bin]]
name = "bashkit-eval"
path = "src/main.rs"

[dependencies]
bashkit = { path = "../bashkit", features = ["scripted_tool", "jq"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true
# Direct rustls dep so we can install the `ring` crypto provider before
# any HTTPS request — paired with reqwest's `rustls-no-provider`. See
# bashkit::network::client for the same pattern in the http_client path.
rustls = { workspace = true }
regex.workspace = true
async-trait.workspace = true
chrono.workspace = true
