[package]
name = "bashkit-fs-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable filesystem interop ABI for Bashkit bindings"

[dependencies]
bashkit = { path = "../bashkit" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
