# Bashkit Python package
# Exposes Bashkit as a Python module via PyO3

[package]
name = "bashkit-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A sandboxed bash interpreter for AI agents"

[lib]
crate-type = ["cdylib"]
name = "bashkit"
doc = false  # Python extension, no Rust docs needed

[dependencies]
# Bashkit core
bashkit = { path = "../bashkit", features = ["scripted_tool"] }

# PyO3 native extension
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }
