# Bashkit Python package
# Exposes Bashkit as a Python module via PyO3

[package]
name = "bashkit-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A sandboxed bash interpreter for AI agents"

[lib]
crate-type = ["cdylib"]
name = "bashkit"
doc = false  # Python extension, no Rust docs needed

[features]
# Stable-ABI (abi3) build. Enabling `abi3-py39` makes pyo3 target the CPython
# limited API with a 3.9 floor, so a single forward-compatible `cp39-abi3` wheel
# per platform serves every Python >= 3.9 — instead of one wheel per minor
# (7 platforms x 6 versions = 42 wheels dropped to 7). Cuts per-release PyPI
# storage ~6x. Off by default so local `maturin develop` keeps a fast,
# version-specific build; the release/CI wheel builds pass `--features abi3`.
# Safe here: the crate's only raw FFI symbol is `PyGILState_Check` (in the
# limited API since 3.2); everything else goes through pyo3's abi3-safe bindings.
abi3 = ["pyo3/abi3-py39"]

[dependencies]
# PyO3 native extension
pyo3 = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Big-integer support for py_to_monty BigInt extraction.
# Pinned to 0.4.x: py_to_monty parses Python ints into `num_bigint::BigInt` and
# hands them to `MontyObject::BigInt`, and monty (git tag v0.0.18) depends on
# num-bigint 0.4. Bumping to 0.5 makes the two BigInt types mismatch and fails
# to compile, so this must track whatever major version bashkit core / monty use.
num-bigint = "^0.4.6"

# Native (non-wasm) targets: full feature set.
# realfs: always-on so Python callers can use mount_real_* APIs.
# http_client/sqlite/interop pull mio/tokio-net/rt-multi-thread/tokio::fs,
# none of which compile on wasm32-unknown-emscripten — see the wasm block
# below and specs/emscripten-wheels.md.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bashkit = { path = "../bashkit", features = ["scripted_tool", "python", "realfs", "jq", "interop", "http_client", "sqlite"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
# pyo3-async-runtimes hard-pulls tokio `rt-multi-thread` + `net` (mio), which
# `compile_error!`s on wasm. Native-only; the wasm build exposes `execute_sync`
# (current-thread runtime) and omits the async `execute()` coroutine bridge.
pyo3-async-runtimes = { workspace = true }

# wasm32 (Pyodide/Emscripten) target: reduced feature set.
# Drops http_client, sqlite, realfs, interop — each requires threads, sockets,
# or host filesystem access that Pyodide does not provide. Keeps the in-VFS
# shell plus the embedded jq and Monty Python interpreters. tokio stays on its
# wasm-safe base features (sync, macros, io-util, rt, time) — current-thread
# runtime only. See specs/emscripten-wheels.md.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bashkit = { path = "../bashkit", features = ["scripted_tool", "python", "jq"] }
tokio = { workspace = true }
