[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bashkit"
version = "0.1.2"
description = "Python bindings for BashKit - a sandboxed bash interpreter for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["bash", "sandbox", "ai", "agent", "shell", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Security",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3", "langchain-anthropic>=0.3"]
deepagents = ["deepagents>=0.3.11", "langchain-anthropic>=0.3"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "."
module-name = "bashkit._bashkit"

[tool.pytest.ini_options]
asyncio_mode = "auto"
