[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bashkit"
dynamic = ["version"]
description = "Python bindings for Bashkit - a sandboxed bash interpreter for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["bash", "sandbox", "ai", "agent", "shell", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Security",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3", "langchain-anthropic>=0.3"]
deepagents = ["deepagents>=0.3.11", "langchain-anthropic>=0.3"]
pydantic-ai = ["pydantic-ai>=1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "."
module-name = "bashkit._bashkit"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bashkit"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
